--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/send.js", "use": "@vercel/node" }
+    {
+      "src": "api/server.js",
+      "use": "@vercel/node"
+    }
   ]
 }
